@@ -1,3 +1,10 @@
+[B]1.2.10[/B]
+- Resolve method in directory has got the live parameter for DASH
+- Sortmethods have unsorted as default parameter/method
+
+[B]1.2.9[/B]
+- Added DASH parameters in directory.resolve function (optional)
+
 [B]1.2.8[/B]
 - Log function tweaks
 
